# media-sniper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/media_sniper/: __init__.py  cmdline.py  log.py
src/media_sniper/config/: __init__.py  settings.yml
src/media_sniper/ffmpeg/: audio.py
src/media_sniper/gui/: gui.py
tests/: __init__.py  test_cmdline.py  test_log.py  test_version.py
tests/ffmpeg/: test_audio.py
